<?xml version="1.0" encoding="utf-8"?>
<TableLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="*"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TableRow>

        <TextView
            android:id="@+id/timeDisplay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/TimeDaily"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/cloud"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:id="@+id/imageDisplay"
            android:contentDescription="@string/imageDesc1" />

        <TextView
            android:id="@+id/tempDisplay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tempDaily"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </TableRow>

</TableLayout>