<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/mainDetailsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:id="@+id/locationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textSize="36sp"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/lastUpdatedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/locationText"
            android:layout_centerInParent="true"
            android:paddingVertical="5dp"
            android:text="@string/last_updated" />

        <LinearLayout
            android:id="@+id/temperatureLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lastUpdatedText"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/temperatureText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mainTemp"
                    android:textSize="45sp" />

                <TextView
                    android:id="@+id/conditionText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginTop="15dp"
                    android:text="@string/tempCondition"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:id="@+id/conditionImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/cloud"
                    android:contentDescription="@string/imageDesc1" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/temperatureLayout"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/feelsLikeTemp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAlignment="center"
                android:text="@string/feels_like"
                />

            <TextView
                android:id="@+id/highTemp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAlignment="center"
                android:text="@string/highTemp"
                 />

            <TextView
                android:id="@+id/lowTemp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAlignment="center"
                android:text="@string/lowTemp"

                />

        </LinearLayout>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/forecastLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="15dp"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@color/gray"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/mainDetailsLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/forecastLabel"
                        android:textStyle="bold"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:baselineAligned="false">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:gravity="center"
                            >
                            <ImageView
                                android:layout_width="28dp"
                                android:layout_height="28dp"
                                android:src="@drawable/sunrise"
                                android:contentDescription="@string/sunrise" />
                            <TextView
                                android:id="@+id/sunriseText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:text="@string/sunrise"/>

                            <ImageView
                                android:layout_marginTop="5dp"
                                android:layout_width="28dp"
                                android:layout_height="28dp"
                                android:src="@drawable/oned"
                                android:contentDescription="@string/uvIndex" />

                            <TextView
                                android:id="@+id/uvIndexText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:text="@string/uvIndex"/>

                            <ImageView
                                android:layout_marginTop="5dp"
                                android:layout_width="28dp"
                                android:layout_height="28dp"
                                android:src="@drawable/humidity"
                                android:contentDescription="@string/humidity" />

                            <TextView
                                android:id="@+id/humidityText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:text="@string/humidity"/>

                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:gravity="center"
                            >

                            <ImageView
                                android:layout_width="28dp"
                                android:layout_height="28dp"
                                android:src="@drawable/sunset"
                                android:contentDescription="@string/sunset" />
                            <TextView
                                android:id="@+id/sunsetText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:text="@string/sunset"/>

                            <ImageView
                                android:layout_marginTop="5dp"
                                android:layout_width="28dp"
                                android:layout_height="28dp"
                                android:src="@drawable/umbrella"
                                android:contentDescription="@string/chanceToRain" />

                            <TextView
                                android:id="@+id/rainText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:text="@string/chanceToRain"/>

                            <ImageView
                                android:layout_marginTop="5dp"
                                android:layout_width="28dp"
                                android:layout_height="28dp"
                                android:src="@drawable/wind"
                                android:contentDescription="@string/wind" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                >
                                <TextView
                                    android:id="@+id/windText"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="5dp"
                                    android:text="@string/wind"/>
                                <TextView
                                    android:id="@+id/windDirText"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="5dp"
                                    android:text="@string/direction"/>

                            </LinearLayout>




                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/gray"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/dayForecastLabel"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:paddingBottom="10dp"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:orientation="horizontal"
                        android:scrollbars="none"/>
                </LinearLayout>


            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>